--- a/index.html
+++ b/index.html
@@ -79,6 +79,35 @@
         </div>
       </div>
     </section>
+    <section class="solutions">
+      <div class="solutions-element">
+        <div class="solutions-intro">
+          <h2>Todas as soluções em apenas um lugar!</h2>
+          <p>Nossa empresa oferece mais do que serviços mecânicos convencionais. <strong>Proporcionamos uma solução
+              integrada</strong> que
+            auxilia na identificação da <strong>oficina mais apropriada</strong> para suas demandas particulares.
+            Asseguramos um
+            <strong>atendimento customizado e eficaz</strong>, tudo isso com a conveniência de <strong>não precisar sair
+              de sua residência</strong>
+          </p>
+        </div>
+        <div class="solutions-body">
+          <div class="elements">
+            <span><img src="img/icons/checked.png" alt="">Alinhamento 3d</span>
+            <span><img src="img/icons/checked.png" alt="">Pneus</span>
+            <span><img src="img/icons/checked.png" alt="">Revisão</span>
+            <span><img src="img/icons/checked.png" alt="">Ar-Condicionado</span>
+            <span><img src="img/icons/checked.png" alt="">Freios</span>
+            <span><img src="img/icons/checked.png" alt="">Suspensão</span>
+            <span><img src="img/icons/checked.png" alt="">Injeção eletrônica</span>
+            <span><img src="img/icons/checked.png" alt="">Acessórios</span>
+            <span><img src="img/icons/checked.png" alt="">Câmbio</span>
+            <span><img src="img/icons/checked.png" alt="">Diagnósticos</span>
+            <span><img src="img/icons/checked.png" alt="">Rodas</span>
+            <span><img src="img/icons/checked.png" alt="">Conveniência</span>
+          </div>
+        </div>
+    </section>
   </main>
   <footer>
     <div class="contato">
