--- a/index.html
+++ b/index.html
@@ -107,7 +107,75 @@
             <span><img src="img/icons/checked.png" alt="">Conveniência</span>
           </div>
         </div>
+
+
     </section>
+    <section class="banner">
+      <div class="main-banner">
+
+        <div class="conteudo">
+          <span>atuamos com nacional e importados</span>
+          <h2>Nossos parceiros são referência em manutenção e assistência em diversas marcas!</h2>
+        </div>
+        <div class="logos">
+          <div class="logos-slide">
+            <img src="img/banner/logo-audi.png" alt="">
+            <img src="img/banner/logo-bmw.png" alt="">
+            <img src="img/banner/logo-chevrolet.png" alt="">
+            <img src="img/banner/logo-fiat.png" alt="">
+            <img src="img/banner/logo-ford.png" alt="">
+            <img src="img/banner/logo-honda.png" alt="">
+            <img src="img/banner/logo-nissan.png" alt="">
+            <img src="img/banner/logo-porsche.png" alt="">
+            <img src="img/banner/logo-renault.png" alt="">
+            <img src="img/banner/logo-suzuki.png" alt="">
+            <img src="img/banner/logo-tesla.png" alt="">
+            <img src="img/banner/logo-volkswagen.png" alt="">
+            <img src="img/banner/logo-chevrolet.png" alt="">
+            <img src="img/banner/logo-mazda.png" alt="">
+            <img src="img/banner/logo-subaru.png" alt="">
+            <img src="img/banner/logo-maserati.png" alt="">
+          </div>
+          <div class="logos-slide">
+            <img src="img/banner/logo-audi.png" alt="">
+            <img src="img/banner/logo-bmw.png" alt="">
+            <img src="img/banner/logo-chevrolet.png" alt="">
+            <img src="img/banner/logo-fiat.png" alt="">
+            <img src="img/banner/logo-ford.png" alt="">
+            <img src="img/banner/logo-honda.png" alt="">
+            <img src="img/banner/logo-nissan.png" alt="">
+            <img src="img/banner/logo-porsche.png" alt="">
+            <img src="img/banner/logo-renault.png" alt="">
+            <img src="img/banner/logo-suzuki.png" alt="">
+            <img src="img/banner/logo-tesla.png" alt="">
+            <img src="img/banner/logo-volkswagen.png" alt="">
+            <img src="img/banner/logo-chevrolet.png" alt="">
+            <img src="img/banner/logo-mazda.png" alt="">
+            <img src="img/banner/logo-subaru.png" alt="">
+            <img src="img/banner/logo-maserati.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="diferentions">
+      <div class="diferentions-header">
+        <span>Diferenciais e Exclusividades</span>
+        <h2>Nos dedicamos 100% no seu conforto e na segurança do seu veículo!</h2>
+      </div>
+      <div class="diferentions-body">
+        <diferentions-item>
+          <figure>
+            <img src="img/diferentions/atendimento.jpg" alt="" height="400px">
+            <figcaption>
+              <h3>Excelência em atendimento</h3>
+              <p>Nosso compromisso em proporcionar uma experiência única e satisfatória destaca-se como nossa marca
+                registrada.</p>
+            </figcaption>
+          </figure>
+        </diferentions-item>
+      </div>
+    </section>
+
   </main>
   <footer>
     <div class="contato">
