--- a/index.html
+++ b/index.html
@@ -158,21 +158,73 @@
       </div>
     </section>
     <section class="diferentions">
-      <div class="diferentions-header">
-        <span>Diferenciais e Exclusividades</span>
-        <h2>Nos dedicamos 100% no seu conforto e na segurança do seu veículo!</h2>
-      </div>
-      <div class="diferentions-body">
-        <diferentions-item>
-          <figure>
-            <img src="img/diferentions/atendimento.jpg" alt="" height="400px">
-            <figcaption>
-              <h3>Excelência em atendimento</h3>
-              <p>Nosso compromisso em proporcionar uma experiência única e satisfatória destaca-se como nossa marca
-                registrada.</p>
-            </figcaption>
-          </figure>
-        </diferentions-item>
+      <div class="diferentions-content">
+        <div class="diferentions-header">
+          <span>Diferenciais e Exclusividades</span>
+          <h2>Nos dedicamos 100% no seu conforto e na segurança do seu veículo!</h2>
+        </div>
+        <div class="diferentions-body">
+          <diferentions-item>
+            <figure>
+              <img src="img/diferentions/atendimento.jpg" alt="" height="400px">
+              <figcaption>
+                <h3>Excelência em atendimento</h3>
+                <p>Nosso compromisso em proporcionar uma experiência única e satisfatória destaca-se como nossa marca
+                  registrada.</p>
+              </figcaption>
+            </figure>
+          </diferentions-item>
+          <diferentions-item>
+            <figure>
+              <img src="img/diferentions/suporte.jpg" alt="" height="400px">
+              <figcaption>
+                <h3>Do Popular ao Luxo</h3>
+                <p>Oferecemos suporte a qualquer veículo. Desde o popular ao luxo, sejam nacionais ou importados. Nosso
+                  objetivo é solucionar o seu problema!</p>
+              </figcaption>
+            </figure>
+          </diferentions-item>
+          <diferentions-item>
+            <figure>
+              <img src="img/diferentions/profissionais.jpg" alt="" height="400px">
+              <figcaption>
+                <h3>Profissionais Altamente Qualificados</h3>
+                <p>Todos nossos parceiros contam com uma equipe de especialistas em diferentes funções, altamente
+                  dedicados e profissionais.</p>
+              </figcaption>
+            </figure>
+          </diferentions-item>
+          <diferentions-item>
+            <figure>
+              <img src="img/diferentions/estoque.jpg" alt="" height="400px">
+              <figcaption>
+                <h3>Suprimentos</h3>
+                <p>Além da mão de obra, oferecemos também toda linha de suprimentos necessária para o conserto do seu
+                  veículo.</p>
+              </figcaption>
+            </figure>
+          </diferentions-item>
+          <diferentions-item>
+            <figure>
+              <img src="img/diferentions/limpeza.jpg" alt="" height="400px">
+              <figcaption>
+                <h3>Rígidos Protocolos de Limpeza</h3>
+                <p>Do início ao fim. Garantimos toda segurança de dentro para fora contra odores, poeira e outros
+                  materiais.</p>
+              </figcaption>
+            </figure>
+          </diferentions-item>
+          <diferentions-item>
+            <figure>
+              <img src="img/diferentions/caminhoes.jpg" alt="" height="400px">
+              <figcaption>
+                <h3>Mecânica Diesel</h3>
+                <p>Pequenos caminhões (VUC - veículos urbanos de carga), caminhonetes e Pickups. Oferecemos manutenção,
+                  revisão e todo o suporte.</p>
+              </figcaption>
+            </figure>
+          </diferentions-item>
+        </div>
       </div>
     </section>
 
