--- a/index.html
+++ b/index.html
@@ -34,17 +34,25 @@
           <span>Configurações</span>
         </div>
       </a>
+
+      <a href="">
+        <div class="menu-hb">
+          <img src="img/icons/menu-hambúrguer.png" alt="" height="24px"">
+        </div>
+      </a>
+
     </div>
   </Header>
   <main>
-    <nav class="menuTop">
-      <div class="menuTop_content">
-        <div class="home Content"><a href="">Página Inicial</a></div>
-        <div class="servicesOrfetados Content"><a href="">Serviços Orfetados</a></div>
-        <div class="servicesAgendamento Content"><a href="">Agendamento de Serviços</a></div>
-        <div class="servicesAberto Content"><a href="">Serviços em Aberto</a></div>
-        <div class="servicesRealizados Content"><a href="">Serviços Realizados</div></a>
-      </div>
+    <nav class=" menuTop">
+          <div class="menuTop_content">
+            <div class="home Content"><a href="">Página Inicial</a></div>
+            <div class="servicesOrfetados Content"><a href="">Serviços Orfetados</a></div>
+            <div class="servicesAgendamento Content"><a href="">Agendamento de Serviços</a></div>
+            <div class="servicesAberto Content"><a href="">Serviços em Aberto</a></div>
+            <div class="servicesRealizados Content"><a href="">Serviços Realizados</div>
+      </a>
+    </div>
 
     </nav>
     <section class="hero">
@@ -227,38 +235,47 @@
         </div>
       </div>
     </section>
-
-  </main>
-  <footer>
-    <div class="contato">
-      <h4>Entre em contato</h4>
-      <div class="whatssap">
-        <img src="img/icons/whatsapp.svg" alt="" height="30px">
-        <span>(xx) xxxxxxxxx</span>
-      </div>
-      <div class="telefone">
-        <img src="img/icons/telefone.svg" alt="" height="30px">
-        <span>(xx) xxxxxxxxx</span>
-      </div>
-    </div>
-    <div class="footer-main">
-      <a href="index.html"><img src="img/logo.png" alt="" height="200px"></a>
-      <span>© Copyright 2024</span>
-    </div>
-    <div class="redes-sociais">
-      <h4>Redes Sociais</h4>
-      <div class="facebook">
-        <a href="">
-          <img src="img/icons/facebook.svg" alt="" height="30px">
-          <span>Facebook</span>
+    <section class="parceiro">
+      <div class="parceiro-body">
+        <h2>Entre em contato para se<br> tornar um parceiro <br><strong>Autocheck!</strong></h2>
+        <a href="#" class="button">
+          <img src="img/icons/whatsapp.svg" alt="" height="24px">
+          falar no whatssap
         </a>
       </div>
-      <div class="instagram">
-        <a href=""><img src="img/icons/instagram.svg" alt="" height="30px">
-          <span>Instagram</span></a>
+    </section>
+
+    </main>
+    <footer>
+      <div class="contato">
+        <h4>Entre em contato</h4>
+        <div class="whatssap">
+          <img src="img/icons/whatsapp.svg" alt="" height="30px">
+          <span>(xx) xxxxxxxxx</span>
+        </div>
+        <div class="telefone">
+          <img src="img/icons/telefone.svg" alt="" height="30px">
+          <span>(xx) xxxxxxxxx</span>
+        </div>
       </div>
-    </div>
-  </footer>
+      <div class="footer-main">
+        <a href="index.html"><img src="img/logo.png" alt="" height="200px"></a>
+        <span>© Copyright 2024</span>
+      </div>
+      <div class="redes-sociais">
+        <h4>Redes Sociais</h4>
+        <div class="facebook">
+          <a href="">
+            <img src="img/icons/facebook.svg" alt="" height="30px">
+            <span>Facebook</span>
+          </a>
+        </div>
+        <div class="instagram">
+          <a href=""><img src="img/icons/instagram.svg" alt="" height="30px">
+            <span>Instagram</span></a>
+        </div>
+      </div>
+    </footer>
 </body>
 
 </html>
