header e footer finalizados

--- a/index.html
+++ b/index.html
@@ -18,43 +18,42 @@
 
 <body>
   <Header>
-    <div class="logo"><a href=""><img src="img/logo.png" alt="" height="150px" width="150px"></a></div>
-
-    <div class="right-menu">
-
-      <a href="">
-        <div class="usuario">
-          <img src="img/icons/user.png" alt="" height="25px">
-          <span>Login</span>
-        </div>
-      </a>
-      <a href="">
-        <div class="configuracoes">
-          <img src="img/icons/configurações.png" alt="" height="25px">
-          <span>Configurações</span>
-        </div>
-      </a>
-
-      <a href="">
-        <div class="menu-hb">
-          <img src="img/icons/menu-hambúrguer.png" alt="" height="24px"">
-        </div>
-      </a>
-
+    <div class="header-container">
+      <div class="logo"><a href=""><img src="img/logo.png" alt="" height="150px" width="150px"></a></div>
+      <div class="right-menu">
+        <a href="">
+          <div class="usuario">
+            <img src="img/icons/user.png" alt="" height="25px">
+            <span>Login</span>
+          </div>
+        </a>
+        <a href="">
+          <div class="configuracoes">
+            <img src="img/icons/configurações.png" alt="" height="25px">
+            <span>Configurações</span>
+          </div>
+        </a>
+        <a href="">
+          <div class="menu-hb">
+            <img src="img/icons/menu-hambúrguer.png" alt="" height="24px"">
+          </div>
+        </a>
+      </div>
     </div>
+
+    <nav class=" menuTop">
+            <div class="menuTop_content">
+              <div class="home Content"><a href="">Página Inicial</a></div>
+              <div class="servicesOrfetados Content"><a href="">Serviços Orfetados</a></div>
+              <div class="servicesAgendamento Content"><a href="">Agendamento de Serviços</a></div>
+              <div class="servicesAberto Content"><a href="">Serviços em Aberto</a></div>
+              <div class="servicesRealizados Content"><a href="">Serviços Realizados</div>
+        </a>
+      </div>
+
+      </nav>
   </Header>
   <main>
-    <nav class=" menuTop">
-          <div class="menuTop_content">
-            <div class="home Content"><a href="">Página Inicial</a></div>
-            <div class="servicesOrfetados Content"><a href="">Serviços Orfetados</a></div>
-            <div class="servicesAgendamento Content"><a href="">Agendamento de Serviços</a></div>
-            <div class="servicesAberto Content"><a href="">Serviços em Aberto</a></div>
-            <div class="servicesRealizados Content"><a href="">Serviços Realizados</div>
-      </a>
-    </div>
-
-    </nav>
     <section class="hero">
       <div>
         <h1>Autocheck, sua mecânica mais
@@ -245,37 +244,37 @@
       </div>
     </section>
 
-    </main>
-    <footer>
-      <div class="contato">
-        <h4>Entre em contato</h4>
-        <div class="whatssap">
-          <img src="img/icons/whatsapp.svg" alt="" height="30px">
-          <span>(xx) xxxxxxxxx</span>
-        </div>
-        <div class="telefone">
-          <img src="img/icons/telefone.svg" alt="" height="30px">
-          <span>(xx) xxxxxxxxx</span>
-        </div>
+  </main>
+  <footer>
+    <div class="contato">
+      <h4>Entre em contato</h4>
+      <div class="whatssap">
+        <img src="img/icons/whatsapp.svg" alt="" height="30px">
+        <span>(xx) xxxxxxxxx</span>
       </div>
-      <div class="footer-main">
-        <a href="index.html"><img src="img/logo.png" alt="" height="200px"></a>
-        <span>© Copyright 2024</span>
+      <div class="telefone">
+        <img src="img/icons/telefone.svg" alt="" height="30px">
+        <span>(xx) xxxxxxxxx</span>
       </div>
-      <div class="redes-sociais">
-        <h4>Redes Sociais</h4>
-        <div class="facebook">
-          <a href="">
-            <img src="img/icons/facebook.svg" alt="" height="30px">
-            <span>Facebook</span>
-          </a>
-        </div>
-        <div class="instagram">
-          <a href=""><img src="img/icons/instagram.svg" alt="" height="30px">
-            <span>Instagram</span></a>
-        </div>
+    </div>
+    <div class="footer-main">
+      <a href="index.html"><img src="img/logo.png" alt="" height="200px"></a>
+      <span>© Copyright 2024</span>
+    </div>
+    <div class="redes-sociais">
+      <h4>Redes Sociais</h4>
+      <div class="facebook">
+        <a href="">
+          <img src="img/icons/facebook.svg" alt="" height="30px">
+          <span>Facebook</span>
+        </a>
       </div>
-    </footer>
+      <div class="instagram">
+        <a href=""><img src="img/icons/instagram.svg" alt="" height="30px">
+          <span>Instagram</span></a>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
