--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         <a href=""><img src="img/icons/instagram.svg" alt="" height="30px">
           <span>Instagram</span></a>
       </div>
-    </div>
+    </div>;
   </footer>
 </body>
 
