--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             auxilia na identificação da <strong>oficina mais apropriada</strong> para suas demandas particulares.
             Asseguramos um
             <strong>atendimento customizado e eficaz</strong>, tudo isso com a conveniência de <strong>não precisar sair
-              de sua residência</strong>
+              de sua residência.</strong>
           </p>
         </div>
         <div class="solutions-body">
