--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TEMPLATE</title>
+  <title>Homepage</title>
   <link rel="stylesheet" href="./styles/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,38 +54,39 @@
       </nav>
   </Header>
   <main>
-    <section class="hero">
-      <div>
-        <h1>Autocheck, sua mecânica mais
-          <div>
-            <span>prática</span>
-            <span>rápida</span>
-            <span>eficaz</span>
-            <span>prática</span>
+    <div class="hero-container">
+      <section class="hero">
+        <div>
+          <h1>Autocheck, sua mecânica mais
+            <div>
+              <span>prática</span>
+              <span>rápida</span>
+              <span>eficaz</span>
+              <span>prática</span>
+            </div>
+          </h1>
+          <div class="buttons">
+            <a href="#" class="button services shadow">
+              <img src="img/icons/oficina.png" alt="" height="24px">
+              SERVIÇOS ORFETADOS
+            </a>
+            <a href="#" class="button agenda">
+              <span class="shadow">
+                <img src="img/icons/agenda.png" alt="" height="24px">
+              </span>
+              AGENDAMENTO
+            </a>
           </div>
-        </h1>
-        <div class="buttons">
-          <a href="#" class="button services shadow">
-            <img src="img/icons/oficina.png" alt="" height="24px">
-            SERVIÇOS ORFETADOS
-          </a>
-
-          <a href="#" class="button agenda">
-            <span class="shadow">
-              <img src="img/icons/agenda.png" alt="" height="24px">
-            </span>
-            AGENDAMENTO
-          </a>
         </div>
-      </div>
-      <div>
-        <div class="content">
-          <img src="img/hero/audi.png" alt="">
-          <img src="img/hero/stars-1.svg" alt="">
-          <img src="img/hero/stars-2.svg" alt="">
+        <div>
+          <div class="content">
+            <img src="img/hero/audi.png" alt="">
+            <img src="img/hero/stars-1.svg" alt="">
+            <img src="img/hero/stars-2.svg" alt="">
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
     <section class="solutions">
       <div class="solutions-element">
         <div class="solutions-intro">
@@ -243,7 +244,6 @@
         </a>
       </div>
     </section>
-
   </main>
   <footer>
     <div class="contato">
